--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,8 +37,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <a class="btn btn-outline-success" href="/admin">Admin</a>
             </form>
           </div>
         </div>
