--- a/templates/school.html
+++ b/templates/school.html
@@ -7,20 +7,13 @@
                 background-color: rgb(36, 36, 36);
             }
             section {
-                margin-top: 100px;
-                margin-right: auto;
-                margin-left: auto;
-                display: grid;
-                width: auto;
-                max-width: 50%;
-                grid-template-columns: auto auto auto;
+                padding-top: 100px;
+                height: auto;
             }
             .centervh {
-                border: 0px solid rgba(0, 0, 0, 0.8);
-                text-align: center;
-                align-items: center;
-                margin-right: auto;
-                margin-left: auto;
+                margin:auto;
+                align-items:center;
+                width: 50%
             }
             .my {
                 padding-bottom: 30px;
@@ -30,7 +23,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Wong's Studio Learning</a>
+              <a class="navbar-brand" href="/">Wong's Studio Learning</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,7 +36,7 @@
                     <a class="nav-link" href="#">HTML CSS JS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/school">School</a>
+                    <a class="nav-link active" href="/school">School</a>
                   </li>
                 </ul>
                 <a href="/admin">
@@ -53,6 +46,32 @@
             </div>
           </nav>
         <section>
+            <div class="list-group centervh">
+              <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">List group item heading</h5>
+                  <small>3 days ago</small>
+                </div>
+                <p class="mb-1">Some placeholder content in a paragraph.</p>
+                <small>And some small print.</small>
+              </a>
+              <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">List group item heading</h5>
+                  <small class="text-muted">3 days ago</small>
+                </div>
+                <p class="mb-1">Some placeholder content in a paragraph.</p>
+                <small class="text-muted">And some muted small print.</small>
+              </a>
+              <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">List group item heading</h5>
+                  <small class="text-muted">3 days ago</small>
+                </div>
+                <p class="mb-1">Some placeholder content in a paragraph.</p>
+                <small class="text-muted">And some muted small print.</small>
+              </a>
+            </div>
             {% for i in range(0, title |length): %}
             <div class="my">
             <div class="card centervh" style="width: 13rem;">
