--- a/templates/admin.html
+++ b/templates/admin.html
@@ -52,6 +52,14 @@
             <input id="img" placeholder="Image Link" class="form-control"><br>
             <input id="link" placeholder="Link ID" class="form-control"><br>
           </div>
+            <div style="width: 100%; text-align: left;">
+            <select name="genre" id="genre">
+              <option value="Select Genre" id="select">Select Genre</option>
+              <option value="code" id="code">Code</option>
+              <option value="school" id="school">School</option>
+            </select>
+            </div>
+            <br>
         </div>
         <div class="center-div">
             <div class="editor"></div>
